# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

# Include sub-projects.
# add_subdirectory ("imager")
# add_subdirectory ("visualizer")
# add_subdirectory ("range_image_visualization")
add_subdirectory("organized_point_cloud")
